# video-vault

./: AI_TAGS_FEATURE.md  CUSTOM_API.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.claude/: git_push_workflow.md
landing-page/: DEPLOYMENT.md  README.md  package-lock.json  pnpm-lock.yaml
landing-page/.github/workflows/: deploy.yml
landing-page/src/layouts/: Layout.astro
landing-page/src/pages/: index.astro
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  get_youtube_transcript.cjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  metadata.rs
src/components/: Calendar.tsx  CalendarDay.tsx  CalendarEventForm.tsx  CalendarEventList.tsx  MarkdownRenderer.tsx  QuickAddToCalendarModal.tsx  RecycleBin.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx  VideoCard.tsx  VideoDetail.tsx  VideoForm.tsx  VideoGrid.tsx  VideoPlayer.tsx
src/hooks/: useCalendar.ts  useReminders.ts  useVideos.ts
