[package]
name = "video-vault"
version = "0.1.0"
description = "Video Vault - Local Video Tutorial Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "video_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.12.3"
base64 = "0.22"
yt-transcript-rs = "0.1.8"
